# ScreenMonitorMCP

./: .env.example  BINARY_TRANSFER_GUIDE.md  CHANGELOG.md  CLAUDE.md  GAMING_MODE_ANALYSIS.md  GAMING_MODE_IMPLEMENTATION.md  GPU_DECODE_GUIDE.md  MCP_SSE_GUIDE.md  MCP_WEBSOCKET_GUIDE.md  MIGRATION.md  README.md  REFACTORING_ROADMAP.md  gaming_presets.json  mcp_client_examples.py  pyproject.toml  requirements.txt  simple_websocket_binary_test.py  test_mcp_websocket.py
screenmonitormcp_v2/: __init__.py
screenmonitormcp_v2/core/: ai_service.py  gaming_mode.py  gaming_websocket.py  mcp_server.py  mcp_sse_server.py  mcp_websocket_server.py  preset_loader.py  screen_capture.py  window_capture.py  windows_capture.py
screenmonitormcp_v2/server/: app.py  config.py
