[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screenmonitormcp-v2"
version = "2.5.0"
description = "A revolutionary Model Context Protocol (MCP) server that gives AI real-time vision capabilities - now with MCP-only mode (no external dependencies required)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
keywords = ["mcp", "screen", "monitor", "capture", "ai", "vision", "automation"]
authors = [{name = "inkbytefo", email = "inkbytefo@gmail.com"}]
maintainers = [{name = "inkbytefo", email = "inkbytefo@gmail.com"}]
license = {text = "MIT"}
# Core dependencies - minimal for MCP-only mode
dependencies = [
    "mss>=9.0.1",                  # Screen capture
    "Pillow>=10.0.0",              # Image processing
    "psutil>=5.9.0",               # System monitoring
    "python-dotenv>=1.0.0",        # Environment variables
    "pydantic>=2.0.0",             # Data validation
    "pydantic-settings>=2.0.0",    # Settings management
    "aiosqlite>=0.19.0",           # Async SQLite
    "mcp>=1.0.0",                  # Model Context Protocol
]

[project.optional-dependencies]
# HTTP server mode with AI capabilities
http = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.3.0",
    "structlog>=23.1.0",           # Structured logging (HTTP only)
]
# Windows GPU-accelerated screen capture optimization (DXGI - fully working)
windows-perf = [
    "dxcam-cpp>=0.0.1",  # DXGI Desktop Duplication (1-5ms capture, 240+ FPS, actively maintained)
    "numpy>=1.21.0",     # Required by dxcam-cpp
]
# Windows Graphics Capture (WGC - fully working)
windows-wgc = [
    "winrt-Windows.Graphics.Capture>=2.0.0",     # WGC API
    "winrt-Windows.Graphics.DirectX.Direct3D11>=2.0.0",  # D3D11 for WGC
    "winrt-Windows.Graphics.Imaging>=2.0.0",     # Image processing
    "numpy>=1.21.0",     # Required for image processing
]
# All Windows optimizations (DXGI + WGC - both fully working)
windows-all = [
    "dxcam-cpp>=0.0.1",  # DXGI - 240+ FPS capable (actively maintained)
    "winrt-Windows.Graphics.Capture>=2.0.0",     # WGC API
    "winrt-Windows.Graphics.DirectX.Direct3D11>=2.0.0",  # D3D11 for WGC
    "winrt-Windows.Graphics.Imaging>=2.0.0",     # Image processing
    "numpy>=1.21.0",     # Required by both backends
]
# All features (HTTP + AI + Windows optimization)
all = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.3.0",
    "structlog>=23.1.0",
    "dxcam-cpp>=0.0.1",  # DXGI (actively maintained)
    "winrt-Windows.Graphics.Capture>=2.0.0",
    "winrt-Windows.Graphics.DirectX.Direct3D11>=2.0.0",
    "winrt-Windows.Graphics.Imaging>=2.0.0",
    "numpy>=1.21.0",
]
# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
# Testing tools
testing = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]
# Documentation tools
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/inkbytefo/ScreenMonitorMCP"
Repository = "https://github.com/inkbytefo/ScreenMonitorMCP"
Documentation = "https://github.com/inkbytefo/ScreenMonitorMCP/blob/main/README.md"
"Bug Tracker" = "https://github.com/inkbytefo/ScreenMonitorMCP/issues"
Changelog = "https://github.com/inkbytefo/ScreenMonitorMCP/blob/main/CHANGELOG.md"

[project.scripts]
screenmonitormcp-v2-mcp = "screenmonitormcp_v2.mcp_main:main"
screenmonitormcp-v2-server = "screenmonitormcp_v2.server.main:main"
screenmonitormcp-v2-cli = "screenmonitormcp_v2.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["screenmonitormcp_v2*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["screenmonitormcp"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
